# spritebox

./: Cargo.toml  HOST_BRIDGE.md  PLAN.md  README.md
scripts/: bootstrap-vm.sh  setup.sh
src/: app.rs  auth.rs  cloud_init.rs  git.rs  host_bridge.rs  main.rs  runtime.rs  sprites_api.rs  state.rs
